Penyelesaian fitur batch 2

--- a/templates/Pages/absen/izin-jam/add.html
+++ b/templates/Pages/absen/izin-jam/add.html
@@ -45,13 +45,17 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mt-2">
                         <h6><b>Jam Mulai Izin</b></h6>
                         <input type="time" name="jam_mulai" class="form-control" id="" >
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mt-2">
                         <h6><b>Jam Akhir Izin</b></h6>
                         <input type="time" name="jam_akhir" class="form-control" id="">
+                    </div>
+                    <div class="col-md-4 mt-2">
+                        <h6><b>Total Izin Jam</b></h6>
+                        <input type="number" name="total_jam" step="any" class="form-control" id="">
                     </div>
                     <div class="col-md-12">
                         <div>
