--- a/templates/Pages/absen/izin-jam/edit.html
+++ b/templates/Pages/absen/izin-jam/edit.html
@@ -46,13 +46,17 @@
                         </div>
                     </div>
                     
-                    <div class="col-md-4">
+                    <div class="col-md-4 mt-2">
                         <h6><b>Jam Mulai Izin</b></h6>
                         <input type="time" value="{{ data[1] }}" name="jam_mulai" class="form-control" id="" >
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mt-2">
                         <h6><b>Jam Akhir Izin</b></h6>
                         <input type="time" value="{{ data[2] }}" name="jam_akhir" class="form-control" id="">
+                    </div>
+                    <div class="col-md-4 mt-2">
+                        <h6><b>Total Izin Jam</b></h6>
+                        <input type="number" value="{{ data[6] }}" name="total_jam" class="form-control" id="">
                     </div>
 
                     <div class="col-md-12">
