--- a/templates/Pages/karyawan/list.html
+++ b/templates/Pages/karyawan/list.html
@@ -63,6 +63,10 @@
                                                 <a href="/jadwal-shift/{{ item[1] }}" class="btn btn-md btn-success"><b>Atur Jadwal Shift</b></a>
                                             </td>
                                         {% endif %}
+                                        
+                                        <td>
+                                            <a href="/ubah-gaji/{{ item[1] }}" class="btn btn-md btn-primary"><b>Ubah Data Pendapatan</b></a>
+                                        </td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
