--- a/templates/Pages/absen/izin-jam/edit.html
+++ b/templates/Pages/absen/izin-jam/edit.html
@@ -1,83 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Tambah Izin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="card mt-3">
-            <br>
-            <div class="ms-3 mt-1">
-                <p><b>Update Data Izin Karyawan (PERJAM)</b></p>
-            </div>
-            <hr>
-            <form action="/update-izin-jam/{{ url_params[0] }}" method="post" class="ms-3 mb-3">
-                <div class="row pe-3">
-                    <div class="col-md-4">
-                        <div>
-                            <h6><b>Karyawan</b></h6>
-                            <input type="text" value="{{ data[7] }}-{{ data[8] }}" list="karyawanList" name="no_karyawan" class="form-control" placeholder="Silahkan Pilih Karyawan yang Izin">
-                            <datalist id="karyawanList">
-                                {% for d in data_karyawan %}
-                                    <option value="{{ d[1] }}-{{ d[2] }}">{{ d[1] }} - {{ d[2] }}</option>
-                                {% endfor %}
-                            </datalist>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div>
-                            <h6><b>Tanggal</b> ({{ data[0] }})</h6>
-                            <input type="date" name="tanggal" class="form-control" id="">
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div>
-                            <h6><b>Jenis Izin</b></h6>
-                            <select name="izin" class="form-control" id="">
-                                <option hidden selected value="">Silahkan Pilih Jenis Izin Karyawan </option>
-                                <option {% if data[3] == "T" %} selected {% endif %} value="T">TERLAMBAT</option>
-                                <option {% if data[3] == "PA" %} selected {% endif %} value="PA">PULANG AWAL</option>
-                                <option {% if data[3] == "MP" %} selected {% endif %} value="MP">MENINGGALKAN PEKERJAAN</option>
-                            </select>
-                        </div>
-                    </div>
-                    
-                    <div class="col-md-4 mt-2">
-                        <h6><b>Jam Mulai Izin</b></h6>
-                        <input type="time" value="{{ data[1] }}" name="jam_mulai" class="form-control" id="" >
-                    </div>
-                    <div class="col-md-4 mt-2">
-                        <h6><b>Jam Akhir Izin</b></h6>
-                        <input type="time" value="{{ data[2] }}" name="jam_akhir" class="form-control" id="">
-                    </div>
-                    <div class="col-md-4 mt-2">
-                        <h6><b>Total Izin Jam</b></h6>
-                        <input type="number" value="{{ data[6] }}" name="total_jam" class="form-control" id="">
-                    </div>
+{% extends "base.html" %}
 
-                    <div class="col-md-12">
-                        <div>
-                            <h6><b>Keterangan</b></h6>
-                            <textarea rows="5" name="keterangan" id="" class="form-control" placeholder="Beri Keterangan untuk Izin Karyawan yang ditambahkan">{{ data[4] }}</textarea>
-                        </div>
-                    </div>
-                    <div class="col-md-12 mt-4">
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-success" type="submit">Simpan</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
+{% block title %}
+Update Izin Karyawan (Jam)
+{% endblock %}
+
+{% block navbar %}
+<nav class="navbar navbar-light bg-success">
+    <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+        href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        MENU
+    </a>
+</nav>
+{% endblock %}
+
+{% block content %}
+
+<div class="card mt-3">
+    
+    <div class="card-header">
+        <div class="row">
+            <div class="col-md-9 pt-2">
+                <h4 class="mt-2" style="line-height: 0.4;"><b>Update Izin Karyawan (PERJAM)</b></h4>
+                <h6 style="color: rgb(73, 73, 73);">&nbsp Silahkan lengkapi data berikut untuk mengubah Izin Jam karyawan</h6>
+            </div>
         </div>
     </div>
+    <form action="/update-izin-jam/{{ url_params[0] }}" method="post" class="ms-3 mb-3">
+        <div class="row pe-3">
+            <div class="col-md-4">
+                <div>
+                    <h6><b>Karyawan</b></h6>
+                    <input type="text" value="{{ data[7] }}-{{ data[8] }}" list="karyawanList" name="no_karyawan"
+                        class="form-control" placeholder="Silahkan Pilih Karyawan yang Izin">
+                    <datalist id="karyawanList">
+                        {% for d in data_karyawan %}
+                        <option value="{{ d[1] }}-{{ d[2] }}">{{ d[1] }} - {{ d[2] }}</option>
+                        {% endfor %}
+                    </datalist>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div>
+                    <h6><b>Tanggal</b> ({{ data[0] }})</h6>
+                    <input type="date" name="tanggal" class="form-control" id="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div>
+                    <h6><b>Jenis Izin</b></h6>
+                    <select name="izin" class="form-control" id="">
+                        <option hidden selected value="">Silahkan Pilih Jenis Izin Karyawan </option>
+                        <option {% if data[3]=="T" %} selected {% endif %} value="T">TERLAMBAT</option>
+                        <option {% if data[3]=="PA" %} selected {% endif %} value="PA">PULANG AWAL</option>
+                        <option {% if data[3]=="MP" %} selected {% endif %} value="MP">MENINGGALKAN PEKERJAAN</option>
+                    </select>
+                </div>
+            </div>
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+            <div class="col-md-4 mt-2">
+                <h6><b>Jam Mulai Izin</b></h6>
+                <input type="time" value="{{ data[1] }}" name="jam_mulai" class="form-control" id="">
+            </div>
+            <div class="col-md-4 mt-2">
+                <h6><b>Jam Akhir Izin</b></h6>
+                <input type="time" value="{{ data[2] }}" name="jam_akhir" class="form-control" id="">
+            </div>
+            <div class="col-md-4 mt-2">
+                <h6><b>Total Izin Jam</b></h6>
+                <input type="number" value="{{ data[6] }}" name="total_jam" class="form-control" id="">
+            </div>
+
+            <div class="col-md-12">
+                <div>
+                    <h6><b>Keterangan</b></h6>
+                    <textarea rows="5" name="keterangan" id="" class="form-control"
+                        placeholder="Beri Keterangan untuk Izin Karyawan yang ditambahkan">{{ data[4] }}</textarea>
+                </div>
+            </div>
+            <div class="col-md-12 mt-4">
+                <div class="d-grid gap-2">
+                    <button class="btn btn-success" type="submit">Simpan</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+
+{% endblock %}
