--- a/templates/Pages/absen/izin-jam/list.html
+++ b/templates/Pages/absen/izin-jam/list.html
@@ -1,35 +1,42 @@
-<!doctype html>
-<html lang="en">
+{% extends "base.html" %}
+{% block title %}
+Daftar Izin Karyawan (Jam)
+{% endblock %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Izin Karyawan (PERJAM)</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
-
-<body>
+{% block navbar %}
     <nav class="navbar navbar-light bg-success">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
         <div class="container">
             <div class="ms-auto me-0 mt-2">
                 <form action="cari-izin-jam" method="get">
                     <div class="input-group mb-2">
-                        <input type="text" class="form-control" name="key" placeholder="Cari Karyawan" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" name="key" placeholder="Cari Izin Perjam" aria-label="Example text with button addon" aria-describedby="button-addon1">
                         <button class="btn btn-outline-light" type="submit" id="button-addon1"><b>Cari</b></button>
                     </div>
                 </form>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+{% endblock %}
+
+{% block content %}
+
         <div class="row">
                 <div class="col-md-12">
                     <div class="card mt-2">
-                        <div class="ms-3 mt-2">
-                            <p><b>Daftar Izin Karyawan <div style="font-weight: bolder;">(PERJAM)</div></b></p>
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-md-9 pt-2">
+                                    <p><b>Daftar Izin Karyawan (PERJAM)</b></p>
+                                </div>
+                                <div class="col-md-3 text-end">
+                                    <a href="/tambah-izin-jam" class="btn btn-success btn-md">Tambah Izin Baru (Perjam)</a>
+                                </div>
+                            </div>
                         </div>
-                        <hr>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table">
@@ -86,10 +93,4 @@
                     </div>
                 </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
