--- a/templates/Pages/absen/lembur/list.html
+++ b/templates/Pages/absen/lembur/list.html
@@ -1,85 +1,88 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Halaman Daftar Lembur</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
+{% block title %}
+    Daftar Lembur Karyawan
+{% endblock %}
 
-<body>
+{% block navbar %}
     <nav class="navbar navbar-light bg-success">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
         <div class="container">
             <div class="ms-auto me-0 mt-2">
                 <form action="/cari-lembur" method="get">
                     <div class="input-group mb-2">
-                        <input type="text" class="form-control" name="key" placeholder="Cari Hari Libur" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        <input type="text" class="form-control" name="key" placeholder="Cari Data Lembur" aria-label="Example text with button addon" aria-describedby="button-addon1">
                         <button class="btn btn-outline-light" type="submit" id="button-addon1"><b>Cari</b></button>
                     </div>
                 </form>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
-                <div class="col-md-12">
-                    <div class="card mt-2">
-                        <div class="ms-3 mt-1">
-                            <p><b>Daftar Lembur Karyawan</b></p>
-                        </div>
-                        <div class="ms-3 mt-2">
-                            <button type="button" class="btn btn-md btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Tambah Data Lembur</button>
-                        </div>
-                        <hr>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>#</th>
-                                            <th>NIK</th>
-                                            <th>Nama</th>
-                                            <th>Tanggal</th>
-                                            <th>Total Lembur</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% if data == [] %}
-                                            <tr>
-                                                <td colspan="5">
-                                                    <center>
-                                                        <br>
-                                                        <b>Data Lembur Tidak Ditemukan</b>
-                                                        <br>
-                                                    </center>
-                                                </td>
-                                            </tr>
-                                        {% else %}
-                                            {% for d in data %}
-                                                <tr>
-                                                    <td>{{ loop.index }}</td>
-                                                    <td> {{ d[3] }} </td>
-                                                    <td> {{ d[4] }} </td>
-                                                    <td> {{ d[1] }} </td>
-                                                    <td> {{ d[2] }} </td>
-                                                    <td>
-                                                        <a href="/update-lembur/{{ d[0] }}" class="btn btn-md btn-warning">Update</a>
-                                                        <a href="/hapus-lembur/{{ d[0] }}" class="btn btn-md btn-danger">Hapus</a>
-                                                    </td>
-                                                </tr>
-                                            {% endfor %}
-                                        {% endif %}
-                                    </tbody>
-                                </table>
+{% endblock %}
+
+{% block content %}
+    <div class="row">
+            <div class="col-md-12">
+                <div class="card mt-2">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-9 pt-2">
+                                <p><b>Daftar Lembur Karyawan</b></p>
+                            </div>
+                            <div class="col-md-3 text-end">
+                                <button type="button" class="btn btn-md btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Tambah Data Lembur</button>
                             </div>
                         </div>
                     </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>NIK</th>
+                                        <th>Nama</th>
+                                        <th>Tanggal</th>
+                                        <th>Total Lembur</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% if data == [] %}
+                                        <tr>
+                                            <td colspan="5">
+                                                <center>
+                                                    <br>
+                                                    <b>Data Lembur Tidak Ditemukan</b>
+                                                    <br>
+                                                </center>
+                                            </td>
+                                        </tr>
+                                    {% else %}
+                                        {% for d in data %}
+                                            <tr>
+                                                <td>{{ loop.index }}</td>
+                                                <td> {{ d[3] }} </td>
+                                                <td> {{ d[5] }} </td>
+                                                <td> {{ d[1] }} </td>
+                                                <td> {{ d[2] }} </td>
+                                                <td>
+                                                    <a href="/ubah-lembur/{{ d[4] }}" class="btn btn-md btn-warning">Update</a>
+                                                    <a href="/hapus-lembur/{{ d[4] }}" class="btn btn-md btn-danger">Hapus</a>
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    {% endif %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-        </div>
+            </div>
     </div>
-    <!-- Modal -->
+    
      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -109,9 +112,4 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
