--- a/templates/Pages/absen/libur/list.html
+++ b/templates/Pages/absen/libur/list.html
@@ -1,16 +1,15 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Halaman Daftar Libur</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
+{% block title %}
+    Daftar Hari Libur
+{% endblock %}
 
-<body>
+{% block navbar %}
     <nav class="navbar navbar-light bg-success">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
         <div class="container">
             <div class="ms-auto me-0 mt-2">
                 <form action="/cari-libur" method="get">
@@ -22,17 +21,22 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
-                <div class="col-md-12">
+{% endblock %}
+
+{% block content %}
+    <div class="row">
+            <div class="col-md-12">
                     <div class="card mt-2">
-                        <div class="ms-3 mt-1">
-                            <p><b>Daftar Hari Libur Karyawan</b></p>
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-md-9 pt-2">
+                                    <p><b>Daftar Hari Libur Karyawan</b></p>
+                                </div>
+                                <div class="col-md-3 text-end">
+                                    <a href="/tambah-libur" class="btn btn-md btn-success">Tambah Hari Libur</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="ms-3 mt-2">
-                            <a href="/tambah-libur" class="btn btn-md btn-success">Tambah Hari Libur</a>
-                        </div>
-                        <hr>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table">
@@ -41,12 +45,13 @@
                                             <th>#</th>
                                             <th>Tanggal Libur</th>
                                             <th>Keterangan</th>
+                                            <th style="width: 20vw;"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         {% if data == [] %}
                                             <tr>
-                                                <td colspan="3">
+                                                <td colspan="4">
                                                     <center>
                                                         <br>
                                                         <b>Data Hari Libur Tidak Ditemukan</b>
@@ -72,13 +77,7 @@
                                 </table>
                             </div>
                         </div>
-                    </div>
                 </div>
-        </div>
+            </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
