--- a/templates/Pages/absen/libur/tambah.html
+++ b/templates/Pages/absen/libur/tambah.html
@@ -1,47 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Tambah Libur</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="card mt-3">
-            <br>
-            <div class="ms-3 mt-1">
-                <p><b>Tambah Hari Libur Karyawan</b></p>
-            </div>
-            <hr>
-            <form action="/tambah-libur" method="post" class="ms-3 mb-3">
-                <div class="row pe-3">
-                    <div class="col-md-4">
-                        <div>
-                            <h6><b>Tanggal</b></h6>
-                            <input type="date" name="tanggal" class="form-control" id="">
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div>
-                            <h6><b>Keterangan</b></h6>
-                            <textarea name="keterangan" id="" class="form-control" placeholder="Beri Keterangan untuk hari libur yang ditambahkan"></textarea>
-                        </div>
-                    </div>
-                    <div class="col-md-12 mt-4">
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-success" type="submit">Simpan</button>
-                        </div>
+{% extends 'base.html' %}
+
+{% block title %}
+    Tambah Hari Libur
+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-light bg-success" style="position: sticky;">
+        <a class="ms-3" style="text-decoration: none;color: white;font-weight: bold;" data-bs-toggle="offcanvas"
+            href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            MENU
+        </a>
+    </nav>
+{% endblock %}
+
+{% block content %} 
+    <div class="card mt-3">
+        <div class="card-header">
+            <h4 class="mt-2" style="line-height: 0.4;"><b>Tambah Hari Libur Karyawan</b></h4>
+            <h6 style="color: rgb(73, 73, 73);">Silahkan lengkapi data berikut untuk menambah hari libur</h6>
+        </div>
+        <form action="/tambah-libur" method="post" class="ms-3 mb-3 mt-2">
+            <div class="row pe-3">
+                <div class="col-md-4">
+                    <div>
+                        <h6><b>Tanggal</b></h6>
+                        <input type="date" name="tanggal" class="form-control" id="">
                     </div>
                 </div>
-            </form>
-        </div>
+                <div class="col-md-8">
+                    <div>
+                        <h6><b>Keterangan</b></h6>
+                        <textarea name="keterangan" id="" class="form-control" placeholder="Beri Keterangan untuk hari libur yang ditambahkan"></textarea>
+                    </div>
+                </div>
+                <div class="col-md-12 mt-4">
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-success" type="submit">Simpan</button>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
+{% endblock %}
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-</html>
